# homebrew-agents

./: .dockerignore  .env.example  .gitignore  Dockerfile  deploy.sh  gc.toml  main.py  pyproject.toml
app/: __main__.py  agent.py  agent_executor.py  agent_handler.py  logging_config.py  multi_agent_server.py
homebrew_agent/: agent.py  agent_executor.py  logging_config.py  manager.py
