[project]
name = "studio-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk>=0.3.1",
    "apscheduler>=3.11.0",
    "asyncpg>=0.30.0",
    "backoff>=2.2.1",
    "google-adk>=1.11.0",
    "orjson>=3.11.1",
    "pydantic>=2.11.7",
    "rich>=13.0.0",
    "pydantic[email]",
    "litellm>=1.75.3",
    "fastapi-sso>=0.18.0",
    "openai<1.100.0",
    "anyio>=4.6",
    "mcp>=1.13.0",
    "httpx>=0.27.0",
]
